test/log/mac/vsnmsubq_vv_i32_m.txt
vsnmsubq_vv_i32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsnmsubq_vv_i32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsnmsubq_vv_i32_m.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vsnmsubq_vv_i32_m.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vsnmsubq_vv_i32_m.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vsnmsubq_vv_i32_m.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vsnmsubq_vv_i32_m.c:22:6: warning: no previous prototype for 'vsnmsubq_vv_i32_m_golden' [-Wmissing-prototypes]
   22 | void vsnmsubq_vv_i32_m_golden(bool16_t mask,int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~
vsnmsubq_vv_i32_m.c: In function 'vsnmsubq_vv_i32_m_golden':
vsnmsubq_vv_i32_m.c:22:76: warning: unused parameter 'c' [-Wunused-parameter]
   22 | void vsnmsubq_vv_i32_m_golden(bool16_t mask,int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                                                                   ~~~~~~~~~^
vsnmsubq_vv_i32_m.c: In function 'main':
vsnmsubq_vv_i32_m.c:42:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   42 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vsnmsubq_vv_i32_m.c:48:30: error: incompatible type for argument 1 of 'vsnmsubq_vv_i32_m_golden'
   48 |     vsnmsubq_vv_i32_m_golden(exp_mask,exp_a,exp_b,exp_c,exp_result);
      |                              ^~~~~~~~
      |                              |
      |                              uint64_t * {aka long long unsigned int *}
vsnmsubq_vv_i32_m.c:22:40: note: expected 'bool16_t' but argument is of type 'uint64_t *' {aka 'long long unsigned int *'}
   22 | void vsnmsubq_vv_i32_m_golden(bool16_t mask,int32_t *a,int32_t *b,int32_t *c,int32_t *exp_result) {
      |                               ~~~~~~~~~^~~~
vsnmsubq_vv_i32_m.c:51:14: warning: implicit declaration of function 'vsnmsubq_vv_i32_m'; did you mean 'vwsnmsubq_vv_i32_m'? [-Wimplicit-function-declaration]
   51 |     result = vsnmsubq_vv_i32_m(mask,a,b,c);
      |              ^~~~~~~~~~~~~~~~~
      |              vwsnmsubq_vv_i32_m
vsnmsubq_vv_i32_m.c:51:14: error: incompatible types when assigning to type 'int32x16_t' from type 'int'
vsnmsubq_vv_i32_m.c:56:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int32_t' {aka 'long int'} [-Wformat=]
   56 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int32_t {aka long int}
      |                                                               %lx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsnmsubq_vv_i32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsnmsubq_vv_i32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsnmsubq_vv_i32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsnmsubq_vv_i32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed